--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape
-            android:shape="ring"
-            android:thicknessRatio="16"
-            android:useLevel="false">
-            <solid android:color="#DDD"/>
-        </shape>
-    </item>
-
-    <item>
-        <shape
-            android:shape="ring"
-            android:thicknessRatio="16"
-            android:useLevel="true">
-            <solid android:color="#268E50"/>
-        </shape>
-    </item>
-</layer-list>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:innerRadiusRatio="2.5"
+    android:shape="ring"
+    android:thickness="20dp"
+    android:useLevel="false">
+    <solid android:color="#D0E7D2" />
+</shape>
